--- a/src/pages/Resources/Resources.scss
+++ b/src/pages/Resources/Resources.scss
@@ -8,6 +8,7 @@
     height: 100%;
     width: 100vw;
     &__main-content{
+        min-height: 100vh;
         width: 78vw;
         height: 100%;
         background-color: rgba(167, 167, 167, 0.06);
